--- a/Practice_Problems/Practice_Problems_2.tex
+++ b/Practice_Problems/Practice_Problems_2.tex
@@ -10,7 +10,7 @@
 
 
 \begin{document}
-\title{EVE102 Practice Problems 1}
+\title{EVE102 Practice Problems 2}
 \author{Graham Coop}
 \date{}
 \maketitle
@@ -27,7 +27,7 @@ collaboratively on an answer key. We think that's great! However, remember to
 attempt the questions multiple times before looking at the answers.\\
 
 Remember the exams are cumulative, so please review your the previous
-practice problems and exam.
+practice problems, questions from the notes, and the first midterm.
 
 %Note that population genetics is an analytic
 %subject that requires repeatedly working through the problems to fully
