--- a/chapter-05.tex
+++ b/chapter-05.tex
@@ -348,7 +348,7 @@ It is instructive to compare eqn.\ \eqref{deltap_add_simpl} to the respective ex
 
 From this analogy, we can borrow some insight we gained for the haploid model. Specifically, the trajectory of the frequency of allele $A_1$ in the diploid model without dominance follows a logistic growth curve similar to \eqref{eq:haploid_logistic growth}. Similarly, eqn.\ \ref{eq:fixTimeSimpl} for the haploid model suggests that in the diploid model without dominance it takes
 \begin{equation}
-	\tau \approx \frac{4}{s} \log(2N)
+	\tau \approx \frac{4}{s} \log(2N)  \label{eq:diploid_fix_time}
 \end{equation}
 generations for the favourable allele ($A_1$)
  to transit from its entry into the population ($p_0 =1/(2N)$)
