--- a/chapter-06.tex
+++ b/chapter-06.tex
@@ -104,8 +104,18 @@ our diploid model above.\\
 \begin{question}
 Melanic squirrels suffer a higher rate of predation (due to hawks) than normally pigmented squirrels. Melanism is due to a dominant, autosomal mutation. The frequency of melanic squirrels at birth is $4 \times 10^{-5}$.\\
 
-{\bf A)} If the mutation rate to new melanic alleles is $10^{-6}$, assuming the melanic allele is at mutation-selection equilibrium, what is the reduction in fitness of the heterozygote? \\ 
-{\bf B)} Suddenly levels of pollution increase dramatically in our population, and predation by hawks now offers an equal (and opposite) advantage to the dark individuals as it once offered to the normally pigmented individuals. If the population size of our squirrels is a million individuals, what is the probability that the population adapts from the standing pool of melanic alleles?  
+{\bf A)} If the mutation rate to new melanic alleles is $10^{-6}$,
+assuming the melanic allele is at mutation-selection equilibrium, what
+is the reduction in fitness of the heterozygote? \\ 
+Suddenly levels of pollution increase dramatically in our population,
+and predation by hawks now offers an equal (and opposite) advantage to
+the dark individuals as it once offered to the normally pigmented
+individuals. \\
+{\bf B)} What is the probability that a single copy of this allele
+(present just once in the population) is lost?\\ 
+{\bf C)}  If the population size of our squirrels is a million
+individuals, and is at mutation selection-balance, what is the probability that the population adapts from
+anyone of these standing pool of melanic alleles?  
 \end{question}
 \end{tcolorbox}
 
