few minor changes

--- a/Practice_Problems/Practice_Problems_3.tex
+++ b/Practice_Problems/Practice_Problems_3.tex
@@ -26,8 +26,8 @@ the Chat Room on Piazza.\\
 collaboratively on an answer key. We think that's great! However, remember to
 attempt the questions multiple times before looking at the answers.\\
 
-Remember the exams are cumulative, so please review your the previous
-practice problems, questions from the notes, and the first midterm.
+Remember the exams are cumulative, so please review your previous practice
+problems, questions from the notes, and the first two midterms.
 
 %Note that population genetics is an analytic
 %subject that requires repeatedly working through the problems to fully
@@ -59,7 +59,7 @@ What is the C-value paradox and how do transposable elements offer a solution to
 A mutation arises that lowers an individual's fitness by
 $10^{-4}$. What is the probability that this mutation fixes in a
 population with effective size $N_e=10^4$? what is the probability it
-fixes in a population of effective size $N_e=10^3$?
+fixes in a population of effective size $N_e=10^3$? Describe why you expect this to be the case.
 \end{question}
 
 
@@ -127,7 +127,7 @@ drug resistance allele?\\
 {\bf B)}	You survey the frequency of drug resistance in the
 malaria in a drug-free area (pop1) nearby to an area where drugs are
 in use (pop2). You find the drug resistance allele to be at a frequency of 10\% in pop1. What is the migration rate between pop1 and pop2? \\
-{\bf C} Imagine an isolated population where anti-malaria drugs have been heavily used and as a result the drug resistance allele is fixed. Drug use is stopped, and a reversion mutation, which is non-drug resistant, arises in the population how long will it take to sweep to fixation?
+{\bf C} Imagine an isolated population where anti-malaria drugs have been heavily used and as a result the drug resistance allele is fixed. Drug use is stopped, and a reversion mutation, which is non-drug resistant, arises in the population. How long will it take to sweep to fixation?
 \end{question}
 
 \end{document}
