Added covar among rellys

--- a/Practice_Problems/Practice_Problems_3.tex
+++ b/Practice_Problems/Practice_Problems_3.tex
@@ -130,4 +130,15 @@ in use (pop2). You find the drug resistance allele to be at a frequency of 10\% 
 {\bf C} Imagine an isolated population where anti-malaria drugs have been heavily used and as a result the drug resistance allele is fixed. Drug use is stopped, and a reversion mutation, which is non-drug resistant, arises in the population. How long will it take to sweep to fixation?
 \end{question}
 
+\begin{question}
+{\bf A)} Explain why a one-locus model cannot explain the evolution of intrinsic postzygotic sterility. \\
+{\bf B)} Briefly outline the Dobzhansky-Muller incompatibility (DMI) model for the evolution of intrinsic postzygotic sterility.  
+\end{question}
+
+
+\begin{question}
+Explain why the number of DMIs is expected to snowball with divergence time.
+\end{question}
+
+
 \end{document}
