--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -3,8 +3,8 @@
 \section*{Introduction}
 
 Evolution is change over time. Biological evolution is change over time in the
-genetic composition of populations. We define the genetic composition of a
-population to be the set of genomes that the individuals in our population
+genetic composition of populations. The genetic composition of a
+population is the set of genomes that the individuals in our population
 carry. While at first this definition of evolution seems at odds with the
 common textbook view of the evolution of phenotypes (such as the changing shape
 of the finch beaks over generations) it is genetic changes that underpin these
