G's change pre overleaf

--- a/Practice_Problems/Equation_sheet_3.tex
+++ b/Practice_Problems/Equation_sheet_3.tex
@@ -22,7 +22,7 @@
 
 
 \begin{document}
-\section*{EVE102 Equation Sheet for Midterm 3}
+%\section*{EVE102 Equation Sheet for Midterm 3}
 
 \begin{center}
 \begin{tabular}{ccc}
