--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -12,6 +12,7 @@
 \usepackage{color}
 \usepackage{fullpage}
 \usepackage{nicefrac}
+\usepackage{csvsimple}
 \usepackage[hypertexnames=false]{hyperref}
 \hypersetup{colorlinks=true, urlcolor=blue, citecolor=black, linkcolor=black}
 
@@ -66,14 +67,14 @@
 \tableofcontents
 
 \newpage
-
-\include{chapter-01}
-\include{chapter-02}
+\include{Chapters/Intro}
+\include{Chapters/chapter-01}
+\include{Chapters/chapter-02}
 %\include{chapter-03}
-\include{chapter-04}
-\include{chapter-05}
-\include{chapter-06}
+\include{Chapters/chapter-04}
+\include{Chapters/chapter-05}
+\include{Chapters/chapter-06}
 %\include{chapter-07}
-\include{chapter-08}
-\include{multi_locus_sel}
+\include{Chapters/chapter-08}
+\include{Chapters/multi_locus_sel}
 \end{document}
