Update on Overleaf.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -1,7 +1,9 @@
 % make clean all
 % make site deploy
-\documentclass[12pt,titlepage]{article}
+%\documentclass[12pt,titlepage]{article}
+\documentclass{tufte-book}
 \usepackage[authoryear]{natbib}
+
 \bibliographystyle{genetics}
 \usepackage{amsfonts}
 \usepackage{amsmath}
@@ -67,7 +69,7 @@
 \tableofcontents
 
 \newpage
-\include{Chapters/Intro}
+\include{Chapters/intro}
 \include{Chapters/chapter-01}
 \include{Chapters/chapter-02}
 %\include{chapter-03}
