Update on Overleaf.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -2,23 +2,21 @@
 % make site deploy
 %\documentclass[12pt,titlepage]{article}
 \documentclass{tufte-book}
-\usepackage[authoryear]{natbib}
-
+%\usepackage[authoryear]{natbib}
 \bibliographystyle{genetics}
 \usepackage{amsfonts}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{rotating}
-\usepackage{marginnote}
+%\usepackage{marginnote}
 \usepackage{color}
-\usepackage{fullpage}
+%\usepackage{fullpage}
 \usepackage{nicefrac}
 \usepackage{csvsimple}
-\usepackage[hypertexnames=false]{hyperref}
-\hypersetup{colorlinks=true, urlcolor=blue, citecolor=black, linkcolor=black}
-
-\usepackage[normalem]{ulem}
+%\usepackage[hypertexnames=false]{hyperref}
+%\hypersetup{colorlinks=true, urlcolor=blue, citecolor=black, linkcolor=black}
+%\usepackage[normalem]{ulem}
 \usepackage{tcolorbox}
 \newcommand{\gc}[1]{{\em \color{green} #1}}
 \newcommand{\sa}[1]{{\color{black} #1}}
@@ -53,15 +51,15 @@
 
 \begin{document}
 
-\title{Notes on Population Genetics}
-\author{Graham Coop$^{1}$ \\
-  \small $^1$ Department of Evolution and Ecology \& Center for Population Biology,\\
-  \small University of California, Davis.\\
-  \small To whom correspondence should be addressed: \texttt{gmcoop@ucdavis.edu}\\
-  \small This work is licensed under a Creative Commons Attribution 3.0 Unported License.\\
-  \small http://creativecommons.org/licenses/by/3.0/ \\
-  \small i.e. you are free to reuse and remix this work, but please include an attribution to the original.
-}
+\title{Population Genetics}
+\author{Graham Coop}
+%  \small $^1$ Department of Evolution and Ecology \& Center for Population Biology,\\
+%  \small University of California, Davis.\\
+%  \small To whom correspondence should be addressed: \texttt{gmcoop@ucdavis.edu}\\
+%  \small This work is licensed under a Creative Commons Attribution 3.0 Unported License.\\
+%  \small http://creativecommons.org/licenses/by/3.0/ \\
+%  \small i.e. you are free to reuse and remix this work, but please include an attribution to the original.
+
 
 \date{}
 \maketitle
