Update on Overleaf.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -77,6 +77,6 @@
 %\include{chapter-07}
 \include{Chapters/chapter-08}
 \include{Chapters/multi_locus_sel}
-\bibliography{
+\bibliography{popgen_notes}
 
 \end{document}
