Update on Overleaf.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -40,6 +40,8 @@
  %   \medskip \textbf{Question~\thequestion. #1}\rmfamily}{\medskip} \end{tcolorbox}
 
 
+\setcounter{secnumdepth}{1}
+
 \newenvironment{question}[1][]{\refstepcounter{question}\par\medskip
    \textbf{Question~\thequestion. #1} \rmfamily}{\medskip} 
 
