adding bib file

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,6 +1,15 @@
 
 
-
+@article{mcdonald1991,
+  title={Adaptive protein evolution at the Adh locus in Drosophila},
+  author={McDonald, John H and Kreitman, Martin},
+  journal={Nature},
+  volume={351},
+  number={6328},
+  pages={652},
+  year={1991},
+  publisher={Nature Publishing Group}
+}
 
 
 @InBook{lewontin01,
