Update on Overleaf.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -10,7 +10,7 @@
 \usepackage{graphicx}
 \usepackage{rotating}
 %\usepackage{marginnote}
-\usepackage{color}
+\usepackage{color,booktabs}
 %\usepackage{fullpage}
 \usepackage{nicefrac}
 \usepackage{csvsimple}
