--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -6,6 +6,36 @@
 }
 
 
+@article{doi:10.1111/j.1469-1809.1949.tb02451.x,
+author = {Wright, Sewall},
+title = {The Genetical Structure of Populations},
+journal = {Annals of Eugenics},
+volume = {15},
+number = {1},
+pages = {323-354},
+doi = {10.1111/j.1469-1809.1949.tb02451.x},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-1809.1949.tb02451.x},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-1809.1949.tb02451.x},
+%abstract = {The articles published by the Annals of Eugenics (1925–1954) have been made available online as an historical archive intended for scholarly use. The work of eugenicists was often pervaded by prejudice against racial, ethnic and disabled groups. The online publication of this material for scholarly research purposes is not an endorsement of those views nor a promotion of eugenics in any way.}
+}
+
+
+
+@article {Wright:43,
+	author = {Wright, Sewall},
+	title = {ISOLATION BY DISTANCE},
+	volume = {28},
+	number = {2},
+	pages = {114--138},
+	year = {1943},
+	publisher = {Genetics},
+	issn = {0016-6731},
+	URL = {http://www.genetics.org/content/28/2/114},
+	eprint = {http://www.genetics.org/content/28/2/114.full.pdf},
+	journal = {Genetics}
+}
+
+
 @article{mcdonald1991,
   title={Adaptive protein evolution at the Adh locus in Drosophila},
   author={McDonald, John H and Kreitman, Martin},
