added wright to bib

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -6,7 +6,7 @@
 }
 
 
-@article{doi:10.1111/j.1469-1809.1949.tb02451.x,
+@article{Wright:49,
 author = {Wright, Sewall},
 title = {The Genetical Structure of Populations},
 journal = {Annals of Eugenics},
@@ -23,7 +23,7 @@ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-1809.1949.tb024
 
 @article {Wright:43,
 	author = {Wright, Sewall},
-	title = {ISOLATION BY DISTANCE},
+	title = {Isolation by Distance},
 	volume = {28},
 	number = {2},
 	pages = {114--138},
