added wright to bib

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -12,6 +12,7 @@ title = {The Genetical Structure of Populations},
 journal = {Annals of Eugenics},
 volume = {15},
 number = {1},
+  year={1949},
 pages = {323-354},
 doi = {10.1111/j.1469-1809.1949.tb02451.x},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-1809.1949.tb02451.x},
