--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,15 @@
+@article{pritchard:00,
+  title={Inference of population structure using multilocus genotype data},
+  author={Pritchard, Jonathan K and Stephens, Matthew and Donnelly, Peter},
+  journal={Genetics},
+  volume={155},
+  number={2},
+  pages={945--959},
+  year={2000},
+  publisher={Genetics Soc America}
+}
+
+
 @book{provine:01,
   title={The origins of theoretical population genetics: with a new afterword},
   author={Provine, William B},
