--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -10,6 +10,30 @@
 }
 
 
+@article{menozzi:78,
+  title={Synthetic maps of human gene frequencies in Europeans},
+  author={Menozzi, Paolo and Piazza, Alberto and Cavalli-Sforza, L},
+  journal={Science},
+  volume={201},
+  number={4358},
+  pages={786--792},
+  year={1978},
+  publisher={American Association for the Advancement of Science}
+}
+
+
+@article{alexander:09,
+  title={Fast model-based estimation of ancestry in unrelated individuals},
+  author={Alexander, David H and Novembre, John and Lange, Kenneth},
+  journal={Genome research},
+  volume={19},
+  number={9},
+  pages={1655--1664},
+  year={2009},
+  publisher={Cold Spring Harbor Lab}
+}
+
+
 @book{provine:01,
   title={The origins of theoretical population genetics: with a new afterword},
   author={Provine, William B},
