--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -10,6 +10,18 @@
 }
 
 
+@article{patterson:06,
+  title={Population structure and eigenanalysis},
+  author={Patterson, Nick and Price, Alkes L and Reich, David},
+  journal={PLoS genetics},
+  volume={2},
+  number={12},
+  pages={e190},
+  year={2006},
+  publisher={Public Library of Science}
+}
+
+
 @article{menozzi:78,
   title={Synthetic maps of human gene frequencies in Europeans},
   author={Menozzi, Paolo and Piazza, Alberto and Cavalli-Sforza, L},
