--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -116,7 +116,7 @@ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-1809.1949.tb024
 }
 
 
-@Book{DobzhanskyBook,
+@InBook{DobzhanskyBook,
   author = 	 {Dobzhansky,Th},
   ALTeditor = 	 {},
   title = 	 {Genetics and the Origin of Species},
@@ -129,7 +129,10 @@ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-1809.1949.tb024
   OPTaddress = 	 {},
   edition = 	 {3rd Ed.},
   OPTmonth = 	 {},
+  pages = 	 {16},
   OPTnote = 	 {},
   OPTannote = 	 {}
 }
+
+
 
