--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,22 @@
   publisher={Genetics Soc America}
 }
 
+@phdthesis{cotterman:40,
+  title={A calculus for statistico-genetics},
+  author={Cotterman, Charles William},
+  year={1940},
+  school={The Ohio State University}
+}
+
+@article{malecot:48,
+  title={Les math{\'e}matiques de l'h{\'e}r{\'e}dit{\'e}},
+  author={Mal{\'e}cot, Gustave},
+  year={1948},
+  publisher={Masson, Paris}
+}
+
+
+
 
 @article{patterson:06,
   title={Population structure and eigenanalysis},
@@ -65,7 +81,6 @@ pages = {323-354},
 doi = {10.1111/j.1469-1809.1949.tb02451.x},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-1809.1949.tb02451.x},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-1809.1949.tb02451.x},
-%abstract = {The articles published by the Annals of Eugenics (1925–1954) have been made available online as an historical archive intended for scholarly use. The work of eugenicists was often pervaded by prejudice against racial, ethnic and disabled groups. The online publication of this material for scholarly research purposes is not an endorsement of those views nor a promotion of eugenics in any way.}
 }
 
 
