changed chpt2 to genetic_drift

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -23,6 +23,12 @@
   publisher={Masson, Paris}
 }
 
+@misc{malecot:69,
+  title={The Mathematics of Heredity (Revised, edited and translated by Yermanos, DM)},
+  author={Mal{\'e}cot, Gustave},
+  year={1969},
+  publisher={Freeman, San Francisco}
+}
 
 
 
