--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -71,7 +71,7 @@
 \newpage
 \include{Chapters/intro}
 \include{Chapters/chapter-01}
-\include{Chapters/chapter-02}
+\include{Chapters/genetic_drift}
 %\include{chapter-03}
 \include{Chapters/chapter-04}
 \include{Chapters/chapter-05}
