updated coal section

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,19 @@
   publisher={Genetics Soc America}
 }
 
+
+@article{watterson:75,
+  title={On the number of segregating sites in genetical models without recombination},
+  author={Watterson, GA},
+  journal={Theoretical population biology},
+  volume={7},
+  number={2},
+  pages={256--276},
+  year={1975},
+  publisher={Elsevier}
+}
+
+
 @phdthesis{cotterman:40,
   title={A calculus for statistico-genetics},
   author={Cotterman, Charles William},
