--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -32,6 +32,9 @@
 \newcommand{\fst}{F_{\mathrm{ST}}}
 \newcommand{\Wbar}{\overline{W}}
 
+\usepackage[colorinlistoftodos]{todonotes}  %disable
+\newcommand{\graham}[1]{\todo[size=\scriptsize, color=red!50]{#1}}
+
 %\newcounter{Question}[section]
 %\setcounter{Question}{1}
 
