Update on Overleaf.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -18,6 +18,11 @@
 %\hypersetup{colorlinks=true, urlcolor=blue, citecolor=black, linkcolor=black}
 %\usepackage[normalem]{ulem}
 \usepackage{tcolorbox}
+
+\usepackage[colorlinks=true, allcolors=black]{hyperref}
+\usepackage[font=small,labelfont=bf]{caption}
+
+
 \newcommand{\gc}[1]{{\em \color{green} #1}}
 \newcommand{\sa}[1]{{\color{black} #1}}
 \newcommand{\plr}[1]{{\em \color{green} (#1)}}
