--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -10,6 +10,31 @@
 }
 
 
+@article{lande:79,
+  title={Quantitative genetic analysis of multivariate evolution, applied to brain: body size allometry},
+  author={Lande, Russell},
+  journal={Evolution},
+  volume={33},
+  number={1Part2},
+  pages={402--416},
+  year={1979},
+  publisher={Wiley Online Library}
+}
+
+
+@article{robinson:16,
+  title={Genomic flatlining in the endangered island fox},
+  author={Robinson, Jacqueline A and Ortega-Del Vecchyo, Diego and Fan, Zhenxin and Kim, Bernard Y and Marsden, Clare D and Lohmueller, Kirk E and Wayne, Robert K and others},
+  journal={Current Biology},
+  volume={26},
+  number={9},
+  pages={1183--1189},
+  year={2016},
+  publisher={Elsevier}
+}
+
+
+
 @article{watterson:75,
   title={On the number of segregating sites in genetical models without recombination},
   author={Watterson, GA},
