Update on Overleaf.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -25,7 +25,7 @@
 \renewcommand{\P}{\mathbb{P}}
 \newcommand{\half}{\tfrac{1}{2}}
 
-\usepackage[colorlinks=true, allcolors=black]{hyperref}
+%\usepackage[colorlinks=true, allcolors=black]{hyperref}
 
 \newcommand{\wbar}{\overline{w}}
 % New commands added by Simon:
