added some coal figs and MK

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -143,7 +143,7 @@ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-1809.1949.tb024
 }
 
 
-@article{mcdonald1991,
+@article{mcdonald:91,
   title={Adaptive protein evolution at the Adh locus in Drosophila},
   author={McDonald, John H and Kreitman, Martin},
   journal={Nature},
