added Wang Aspen

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,74 @@
+
+@article{sturtevant:15,
+  title={The behavior of the chromosomes as studied through linkage},
+  author={Sturtevant, Alfred Henry},
+  journal={Zeitschrift f{\"u}r induktive Abstammungs-und Vererbungslehre},
+  volume={13},
+  number={1},
+  pages={234--287},
+  year={1915},
+  publisher={Springer}
+}
+
+
+
+@article{Johannsen:1911,
+author = {Johannsen, W.},
+title = {The Genotype Conception of Heredity},
+journal = {The American Naturalist},
+volume = {45},
+number = {531},
+pages = {129-159},
+year = {1911},
+doi = {10.1086/279202},
+
+URL = { 
+        https://doi.org/10.1086/279202  
+},
+eprint = { 
+        https://doi.org/10.1086/279202    
+}
+}
+
+
+
+@article{potti:11,
+  title={Heritability and genetic correlation between the sexes in a songbird sexual ornament},
+  author={Potti, Jaime and Canal, David},
+  journal={Heredity},
+  volume={106},
+  number={6},
+  pages={945},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{galen:96,
+  title={Rates of floral evolution: adaptation to bumblebee pollination in an alpine wildflower, Polemonium viscosum},
+  author={Galen, Candace},
+  journal={Evolution},
+  volume={50},
+  number={1},
+  pages={120--125},
+  year={1996},
+  publisher={Wiley Online Library}
+}
+
+
+@article{lister:89,
+  title={Rapid dwarfing of red deer on Jersey in the last interglacial},
+  author={Lister, AM},
+  journal={Nature},
+  volume={342},
+  number={6249},
+  pages={539},
+  year={1989},
+  publisher={Nature Publishing Group}
+}
+
+
+
 @article{pritchard:00,
   title={Inference of population structure using multilocus genotype data},
   author={Pritchard, Jonathan K and Stephens, Matthew and Donnelly, Peter},
