--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -9,6 +9,7 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{rotating}
+\usepackage[normalem]{ulem}   %%MArs/Venus symbols
 %\usepackage{marginnote}
 \usepackage{color,booktabs}
 %\usepackage{fullpage}
@@ -115,7 +116,8 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 \include{Chapters/chapter-01}
 \include{Chapters/genetic_drift}
 %\include{chapter-03}
-\include{Chapters/chapter-04}
+\include{Chapters/Pheno_var}
+\include{Chapters/Response_to_sel}
 \include{Chapters/chapter-05}
 \include{Chapters/chapter-06}
 %\include{chapter-07}
