--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,4 +1,32 @@
 
+@article{RITLAND:01,
+title = "Inheritance and population structure of the white-phased “Kermode” black bear",
+journal = "Current Biology",
+volume = "11",
+number = "18",
+pages = "1468 - 1472",
+year = "2001",
+issn = "0960-9822",
+doi = "https://doi.org/10.1016/S0960-9822(01)00448-1",
+url = "http://www.sciencedirect.com/science/article/pii/S0960982201004481",
+author = "Kermit Ritland and Craig Newton and H.Dawn Marshall"
+}
+
+
+
+@article{wang:18,
+  title={A major locus controls local adaptation and adaptive life history variation in a perennial plant},
+  author={Wang, Jing and Ding, Jihua and Tan, Biyue and Robinson, Kathryn M and Michelson, Ingrid H and Johansson, Anna and Nystedt, Bj{\"o}rn and Scofield, Douglas G and Nilsson, Ove and Jansson, Stefan and others},
+  journal={Genome biology},
+  volume={19},
+  number={1},
+  pages={72},
+  year={2018},
+  publisher={BioMed Central}
+}
+
+
+
 @article{sturtevant:15,
   title={The behavior of the chromosomes as studied through linkage},
   author={Sturtevant, Alfred Henry},
