--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -9,7 +9,8 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{rotating}
-\usepackage[normalem]{ulem}   %%MArs/Venus symbols
+\usepackage{wasysym}
+%\usepackage[normalem]{ulem}   %%MArs/Venus symbols
 %\usepackage{marginnote}
 \usepackage{color,booktabs}
 %\usepackage{fullpage}
