--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,4 +1,57 @@
 
+
+@article{wilkinson:93,
+  title={Artificial sexual selection alters allometry in the stalk-eyed fly Cyrtodiopsis dalmanni (Diptera: Diopsidae)},
+  author={Wilkinson, Gerald S},
+  journal={Genetics Research},
+  volume={62},
+  number={3},
+  pages={213--222},
+  year={1993},
+  publisher={Cambridge University Press}
+}
+
+
+
+@article{Messier:97,
+  title={Episodic adaptive evolution of primate lysozymes},
+  author={Messier, Walter and Stewart, Caro-Beth},
+  journal={Nature},
+  volume={385},
+  number={6612},
+  pages={151},
+  year={1997},
+  publisher={Nature Publishing Group}
+}
+
+
+
+@article{Yang:98,
+author = {Yang, Z},
+title = {Likelihood ratio tests for detecting positive selection and application to primate lysozyme evolution.},
+journal = {Molecular Biology and Evolution},
+volume = {15},
+number = {5},
+pages = {568-573},
+year = {1998},
+doi = {10.1093/oxfordjournals.molbev.a025957},
+URL = {http://dx.doi.org/10.1093/oxfordjournals.molbev.a025957},
+eprint = {/oup/backfile/content_public/journal/mbe/15/5/10.1093_oxfordjournals.molbev.a025957/1/mbev_15_05_0568.pdf}
+}
+
+@article{Wisely:02,
+author = {Wisely, S. M. and Buskirk, S. W. and Fleming, M. A. and McDonald, D. B. and Ostrander, E. A.},
+title = {Genetic Diversity and Fitness in Black-Footed Ferrets Before and During a Bottleneck},
+journal = {Journal of Heredity},
+volume = {93},
+number = {4},
+pages = {231-237},
+year = {2002},
+doi = {10.1093/jhered/93.4.231},
+URL = {http://dx.doi.org/10.1093/jhered/93.4.231},
+eprint = {/oup/backfile/content_public/journal/jhered/93/4/10.1093/jhered/93.4.231/2/231.pdf}
+}
+
 @article{RITLAND:01,
 title = "Inheritance and population structure of the white-phased “Kermode” black bear",
 journal = "Current Biology",
