updated freq spec

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,17 @@
+
+@article{leffler:12,
+  title={Revisiting an old riddle: what determines genetic diversity levels within species?},
+  author={Leffler, Ellen M and Bullaughey, Kevin and Matute, Daniel R and Meyer, Wynn K and Segurel, Laure and Venkat, Aarti and Andolfatto, Peter and Przeworski, Molly},
+  journal={PLoS biology},
+  volume={10},
+  number={9},
+  pages={e1001388},
+  year={2012},
+  publisher={Public Library of Science}
+}
+
+
+
 @article{wilkinson:93,
   title={Artificial sexual selection alters allometry in the stalk-eyed fly Cyrtodiopsis dalmanni (Diptera: Diopsidae)},
   author={Wilkinson, Gerald S},
