--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,3 +1,86 @@
+
+article {Allendorf:09,
+	author = {Allendorf, Fred W. and Hard, Jeffrey J.},
+	title = {Human-induced evolution caused by unnatural selection through harvest of wild animals},
+	volume = {106},
+	number = {Supplement 1},
+	pages = {9987--9994},
+	year = {2009},
+	doi = {10.1073/pnas.0901069106},
+	publisher = {National Academy of Sciences},
+	issn = {0027-8424},
+	URL = {http://www.pnas.org/content/106/Supplement_1/9987},
+	eprint = {http://www.pnas.org/content/106/Supplement_1/9987.full.pdf},
+	journal = {Proceedings of the National Academy of Sciences}
+}
+
+
+
+@article{haldane:42,
+  title={The selective elimination of silver foxes in eastern Canada},
+  author={Haldane, JBS},
+  journal={Journal of Genetics},
+  volume={44},
+  number={2-3},
+  pages={296--304},
+  year={1942},
+  publisher={Springer}
+}
+
+
+%%%%foxes data from Haldane 1942
+@Book{elton:42,
+  author = 	 {Elton, Charles},
+  OPTeditor = 	 {},
+  title = 	 {Voles, mice and lemmings. Problems in population dynamics.},
+  publisher = 	 {Oxford: Clarendon Press},
+  year = 	 {1942},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  OPTseries = 	 {},
+  OPTaddress = 	 {},
+  OPTedition = 	 {},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@article{tajima:89,
+  title={Statistical method for testing the neutral mutation hypothesis by DNA polymorphism.},
+  author={Tajima, Fumio},
+  journal={Genetics},
+  volume={123},
+  number={3},
+  pages={585--595},
+  year={1989},
+  publisher={Genetics Soc America}
+}
+
+
+@article{nelson:12,
+  title={An abundance of rare functional variants in 202 drug target genes sequenced in 14,002 people},
+  author={Nelson, Matthew R and Wegmann, Daniel and Ehm, Margaret G and Kessner, Darren and Jean, Pamela St and Verzilli, Claudio and Shen, Judong and Tang, Zhengzheng and Bacanu, Silviu-Alin and Fraser, Dana and others},
+  journal={Science},
+  pages={1217876},
+  year={2012},
+  publisher={American Association for the Advancement of Science}
+}
+
+
+@article{brandvain:14,
+  title={Speciation and introgression between Mimulus nasutus and Mimulus guttatus},
+  author={Brandvain, Yaniv and Kenney, Amanda M and Flagel, Lex and Coop, Graham and Sweigart, Andrea L},
+  journal={PLoS Genetics},
+  volume={10},
+  number={6},
+  pages={e1004410},
+  year={2014},
+  publisher={Public Library of Science}
+}
+
+
+
 @article{leffler:12,
   title={Revisiting an old riddle: what determines genetic diversity levels within species?},
   author={Leffler, Ellen M and Bullaughey, Kevin and Matute, Daniel R and Meyer, Wynn K and Segurel, Laure and Venkat, Aarti and Andolfatto, Peter and Przeworski, Molly},
