added multi-loc chapter

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -124,6 +124,6 @@ https://github.com/cooplab/popgen-notes/ and again are under a Creative Commons 
 %\include{chapter-07}
 \include{Chapters/chapter-08}
 \include{Chapters/multi_locus_sel}
-\bibliography{popgen_notes}
+\bibliography{Chapters/popgen_notes}
 
 \end{document}
